--- a/src/main/resources/templates/new.html
+++ b/src/main/resources/templates/new.html
@@ -30,50 +30,80 @@
         </form>
     </div>
 </nav>
-<!-- Add User Tab -->
-<div class="tab-pane fade" id="addUser" role="tabpanel" aria-labelledby="addUserTab">
-    <div class="card">
-        <div class="card-body">
-            <h5 class="bg-light card-title">Add New User</h5>
-            <form th:action="@{/admin/new/}" method="POST">
-                <div class="mb-3">
-                    <label for="username" class="form-label">Username</label>
-                    <input type="text" id="username" class="form-control" name="username" required>
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-2 bg-light vh-100">
+            <div class="d-flex flex-column p-3">
+                <a href="/admin" class="btn btn-primary" role="button">Admin</a>
+            </div>
+            <div class="d-flex flex-column p-3">
+                <a href="/admin/user" class="btn btn-primary" role="button">User</a>
+            </div>
+        </div>
+
+        <div class="col-10">
+            <div class="container mt-4">
+                <h1 class="mb-4">Admin panel</h1>
+
+                <!-- Tabs Navigation -->
+                <ul class="nav nav-tabs" id="adminTab" role="tablist">
+                    <li class="nav-item" role="presentation">
+                        <a class="nav-link" id="userListTab" href="/admin" role="tab" aria-controls="userList"
+                           aria-selected="false">Users table</a>
+                    </li>
+                    <li class="nav nav-tabs" role="presentation">
+                        <a class="nav-link active" id="addUserTab" href="/admin/new" role="tab" aria-controls="addUser"
+                           aria-selected="true">New user</a>
+                    </li>
+                </ul>
+
+                <!-- Add User Tab -->
+                <div class="tab-pane fade show active" id="addUser" role="tabpanel" aria-labelledby="addUserTab">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="bg-light card-title">Add New User</h5>
+                            <form th:action="@{/admin/new}" method="POST">
+                                <div class="mb-3">
+                                    <label for="username" class="form-label">Username</label>
+                                    <input type="text" id="username" class="form-control" name="username" required>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="surname" class="form-label">Surname</label>
+                                    <input type="text" id="surname" class="form-control" name="surname" required>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="age" class="form-label">Age</label>
+                                    <input type="number" id="age" class="form-control" name="age" min="0" max="120"
+                                           step="1" required>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="email" class="form-label">Email</label>
+                                    <input type="email" id="email" class="form-control" name="email" required>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="password" class="form-label">Password</label>
+                                    <input type="password" id="password" class="form-control" name="password"
+                                           required>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="role" class="form-label">Role</label>
+                                    <select id="role" class="form-select" name="role" required>
+                                        <option value="1">ADMIN</option>
+                                        <option value="2">USER</option>
+                                    </select>
+                                </div>
+                                <div class="mb-3">
+                                    <button type="submit"
+                                            class="btn btn-success d-flex justify-content-center w-100">Add new user
+                                    </button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
                 </div>
-                <div class="mb-3">
-                    <label for="surname" class="form-label">Surname</label>
-                    <input type="text" id="surname" class="form-control" name="surname" required>
-                </div>
-                <div class="mb-3">
-                    <label for="age" class="form-label">Age</label>
-                    <input type="number" id="age" class="form-control" name="age" min="0" max="120"
-                           step="1" required>
-                </div>
-                <div class="mb-3">
-                    <label for="email" class="form-label">Email</label>
-                    <input type="email" id="email" class="form-control" name="email" required>
-                </div>
-                <div class="mb-3">
-                    <label for="password" class="form-label">Password</label>
-                    <input type="password" id="password" class="form-control" name="password"
-                           required>
-                </div>
-                <div class="mb-3">
-                    <label for="role" class="form-label">Role</label>
-                    <select id="role" class="form-select" name="role" required>
-                        <option value="1">ADMIN</option>
-                        <option value="2">USER</option>
-                    </select>
-                </div>
-                <div class="mb-3">
-                    <button type="submit"
-                            class="btn btn-success d-flex justify-content-center w-100">Add new user
-                    </button>
-                </div>
-            </form>
+            </div>
         </div>
     </div>
-</div>
-
 </body>
 </html>
