--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -49,12 +49,12 @@
                 <!-- Tabs Navigation -->
                 <ul class="nav nav-tabs" id="adminTab" role="tablist">
                     <li class="nav-item" role="presentation">
-                        <a class="nav-link active" id="userListTab" data-bs-toggle="tab" href="#userList" role="tab"
-                           aria-controls="userList" aria-selected="true">Users table</a>
+                        <a class="nav-link active" id="userListTab" href="/admin" role="tab" aria-controls="userList"
+                           aria-selected="true">Users table</a>
                     </li>
                     <li class="nav-item" role="presentation">
-                        <a class="nav-link" id="addUserTab" data-bs-toggle="tab" href="#addUser" role="tab"
-                           aria-controls="addUser" aria-selected="false">New user</a>
+                        <a class="nav-link" id="addUserTab" href="/admin/new" role="tab" aria-controls="addUser"
+                           aria-selected="false">New user</a>
                     </li>
                 </ul>
 
@@ -117,51 +117,6 @@
                                         </tbody>
                                     </table>
                                 </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Add User Tab -->
-                    <div class="tab-pane fade" id="addUser" role="tabpanel" aria-labelledby="addUserTab">
-                        <div class="card">
-                            <div class="card-body">
-                                <h5 class="bg-light card-title">Add New User</h5>
-                                <form th:action="@{/admin/new/}" method="POST">
-                                    <div class="mb-3">
-                                        <label for="username" class="form-label">Username</label>
-                                        <input type="text" id="username" class="form-control" name="username" required>
-                                    </div>
-                                    <div class="mb-3">
-                                        <label for="surname" class="form-label">Surname</label>
-                                        <input type="text" id="surname" class="form-control" name="surname" required>
-                                    </div>
-                                    <div class="mb-3">
-                                        <label for="age" class="form-label">Age</label>
-                                        <input type="number" id="age" class="form-control" name="age" min="0" max="120"
-                                               step="1" required>
-                                    </div>
-                                    <div class="mb-3">
-                                        <label for="email" class="form-label">Email</label>
-                                        <input type="email" id="email" class="form-control" name="email" required>
-                                    </div>
-                                    <div class="mb-3">
-                                        <label for="password" class="form-label">Password</label>
-                                        <input type="password" id="password" class="form-control" name="password"
-                                               required>
-                                    </div>
-                                    <div class="mb-3">
-                                        <label for="role" class="form-label">Role</label>
-                                        <select id="role" class="form-select" name="role" required>
-                                            <option value="1">ADMIN</option>
-                                            <option value="2">USER</option>
-                                        </select>
-                                    </div>
-                                    <div class="mb-3">
-                                        <button type="submit"
-                                                class="btn btn-success d-flex justify-content-center w-100">Add new user
-                                        </button>
-                                    </div>
-                                </form>
                             </div>
                         </div>
                     </div>
