--- a/src/main/resources/templates/new.html
+++ b/src/main/resources/templates/new.html
@@ -87,8 +87,8 @@
                                            required>
                                 </div>
                                 <div class="mb-3">
-                                    <label for="role" class="form-label">Role</label>
-                                    <select id="role" class="form-select" name="role" required>
+                                    <label for="roles" class="form-label">Role</label>
+                                    <select name="role" class="form-select" multiple id="roles" style="height: 100px;">
                                         <option value="1">ADMIN</option>
                                         <option value="2">USER</option>
                                     </select>
