--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -38,7 +38,7 @@
                 <a href="/admin" class="btn btn-primary" role="button">Admin</a>
             </div>
             <div class="d-flex flex-column p-3">
-                <a href="/admin/user" class="btn btn-primary" role="button">User</a>
+                <a href="/user" class="btn btn-primary" role="button">User</a>
             </div>
         </div>
 
