--- a/src/main/resources/templates/userAdminInfo.html
+++ b/src/main/resources/templates/userAdminInfo.html
@@ -34,12 +34,14 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-2 bg-light vh-100">
-            <div class="d-flex flex-column p-3">
-                <a href="/admin" class="btn btn-primary" role="button">Admin</a>
-            </div>
-            <div class="d-flex flex-column p-3">
-                <a href="/admin/user" class="btn btn-primary" role="button">User</a>
-            </div>
+            <ul class="list-unstyled">
+                <div class="btn-group-vertical" role="group" aria-label="Basic example" style="width: 100%;">
+                    <a href="/admin" class="btn btn-light" role="button">Admin</a>
+                    <a href="/user" class="btn btn-primary active" role="button"
+                       style="background-color: #007BFF; border-color: #007BFF;">User</a>
+
+                </div>
+            </ul>
         </div>
 
         <div class="col-10">
